# insure-assist

./: .gitignore  PROJECT_PLAN.md  cors.json  deploy_local.md  docker-compose.yml  features.md  livekit-syntax.md  mcp-data-sources.md  mission.md  vm_crash_logs.txt
acord/: README.md  acord_fields.txt  agentic_workflow.py  agents.py  check_naic.py  check_test.py  dump_fields.py  find_naic.py  inspect_pdf.py  main.py  output.json  output_demands.txt  parse_contract.py  pdf_fields.json  pdf_fields_dump.txt  pdf_utils.py  schemas.py  test_checkboxes.py  test_fastapi.py  test_next_naic.py  test_sun_valley.py  test_unmanaged.py  verify_regression.py
agency-command-center/: app.py
broker-portal/: Dockerfile  cors.json  manual_test_fields.json  test.mjs  (+9 more)
front-desk-telephony/: ARCHITECTURE.md  Dockerfile  agent.py  class_doc.txt  deploy.md  main.py  pyproject.toml  requirements.txt
front-desk-telephony/artifacts/: delete_ghosts.py  local_agent_backup.py  temp.env  vm_agent_backup.py
front-desk-telephony/docs/history/2026-02-24-initialize-template/: implementation_plan.md  task.md  walkthrough.md
front-desk-telephony/docs/history/2026-03-01-automated-testing-framework/: implementation_plan.md  task.md  walkthrough.md
front-desk-telephony/late-payment/: README.md  agent.py
front-desk-telephony/openspec/: AGENTS.md
front-desk-telephony/receptionist/: agent.py  agent_tools.py
front-desk-telephony/renewal-nudge/: README.md  agent.py
front-desk-telephony/signature-chaser/: README.md  agent.py
front-desk-telephony/tests/: test_agent_boot.py  test_agent_tools.py
(+122 files in other folders)
